crates/server/tests/snapshots/replay__movie_edit_forbidden.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "forbidden",
      "message": "admin role required"
    }
  },
  "status": 403
}
