crates/server/tests/snapshots/replay__movies_bad_sort.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "bad_request",
      "message": "unknown sort: bogus"
    }
  },
  "status": 400
}
