crates/server/tests/snapshots/replay__movies_collection_random.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "version_id": "v4"
  },
  "status": 200
}
