crates/server/tests/snapshots/replay__movies_collections.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "items": [
      {
        "added_at": "2023-11-14T22:13:27Z",
        "artwork": {
          "backdrop": {
            "base": "/images/c1-backdrop",
            "widths": [
              480,
              960
            ]
          },
          "poster": {
            "base": "/images/c1-poster",
            "widths": [
              180,
              480,
              960
            ]
          }
        },
        "id": "c1",
        "movies": [
          "m1"
        ],
        "name": "Saga",
        "overview": "epic",
        "updated_at": "2023-11-14T22:13:27Z"
      }
    ],
    "limit": 50,
    "offset": 0,
    "total": 1
  },
  "status": 200
}
