crates/server/tests/snapshots/replay__movies_create_collection.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "added_at": "[added_at]",
    "artwork": {},
    "id": "[id]",
    "movies": [
      "m1"
    ],
    "name": "New",
    "overview": null,
    "updated_at": "[updated_at]"
  },
  "status": 201
}
