crates/server/tests/snapshots/replay__movies_update_collection.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "id": "[id]",
    "movies": [],
    "name": "Renamed",
    "overview": "now"
  },
  "status": 200
}
